@@ -15,3 +15,8 @@
 
 /* Release Version number of project */
 #define IPOPT_VERSION_RELEASE 9999
+
+/* Define to the C type corresponding to Fortran INTEGER */
+#ifndef FORTRAN_INTEGER_TYPE
+#define FORTRAN_INTEGER_TYPE int
+#endif
